<resources>
    <string name="app_name">FamilyApp2018</string>
    <string name="action_settings">Settings</string>
    <string name="new_expenditure">New Expenditure</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="paid">Paid</string>
    <string name="credit">Credit</string>
    <string name="comment">comment</string>
    <string name="save">Save</string>
    <string name="title_activity_trail_expenditure">TrailExpenditure</string>
    <string name="dssdkjsdk">Comment</string>


</resources>
